package gk.bai1;

public interface IAnh {
    public String hienThi();
}
